# android-service-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.js  vite.config.js.timestamp-1738887980762.mjs
apps/android-service-runtime/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/android-service-runtime/src-tauri/icons/: icon.icns
apps/android-service-runtime/src-tauri/src/: lib.rs  main.rs
apps/example-client-app/: Cargo.toml  README.md  keystore.properties  package.json
apps/example-client-app/dnas/forum/workdir/: dna.yaml
apps/example-client-app/dnas/forum/zomes/integrity/posts/: Cargo.toml
apps/example-client-app/src/: App.svelte
apps/example-client-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/example-client-app/src-tauri/capabilities/: main.json
apps/example-client-app/src-tauri/src/: lib.rs
apps/example-client-app/tests/: package.json
apps/example-client-app/tests/src/forum/posts/: common.ts
apps/example-client-app/ui/: package.json
apps/example-client-app/ui/src/: App.svelte  index.css
apps/example-client-app/ui/src/forum/posts/: AllPosts.svelte  CommentDetail.svelte  CommentsForPost.svelte  CreateComment.svelte  CreatePost.svelte  EditPost.svelte  PostDetail.svelte  types.ts
apps/example-client-app/workdir/: happ.yaml  web-happ.yaml
crates/holochain-conductor-runtime-ffi/: Cargo.toml  README.md  uniffi.toml
crates/holochain-conductor-runtime-ffi/fixtures/: forum.happ
crates/holochain-conductor-runtime-ffi/scripts/: build-debug.sh  build-single-target.sh  build.sh
crates/holochain-conductor-runtime-ffi/src/: config.rs  error.rs  lib.rs  multi_thread.rs  runtime.rs  types.rs
crates/holochain_runtime_types_uniffi/: Cargo.toml  README.md  uniffi.toml
crates/holochain_runtime_types_uniffi/scripts/: build.sh
crates/holochain_runtime_types_uniffi/src/: config.rs  error.rs  lib.rs  types.rs
crates/holochain_runtime_uniffi/: Cargo.toml  uniffi.toml
crates/holochain_runtime_uniffi/src/: lib.rs  runtime.rs  types.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime-types-ffi/: Cargo.toml  README.md  uniffi.toml
crates/runtime-types-ffi/scripts/: build-single-target.sh  build.sh
crates/runtime-types-ffi/src/: lib.rs  types.rs
crates/runtime/fixtures/: forum.happ
crates/runtime/src/: authorization.rs  autostart.rs  config.rs  error.rs  lib.rs  persisted.rs  runtime.rs  types.rs  utils.rs
crates/tauri-plugin-client/: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
crates/tauri-plugin-client/android/: .gitignore  build.gradle.kts  settings.gradle
crates/tauri-plugin-client/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-client/android/src/main/java/: DisconnectedNotice.kt  HolochainServiceClientPlugin.kt  HolochainServiceConsumerPlugin.kt  InvokeTypes.kt  Notice.kt  OverlayNotice.kt  UnauthorizedNotice.kt
crates/tauri-plugin-client/android/src/main/res/layout/: disconnected_notice.xml  unauthorized_notice.xml
crates/tauri-plugin-client/android/src/main/res/values/: strings.xml
crates/tauri-plugin-client/dist-js/holochain-env/: index.min.js
crates/tauri-plugin-client/dist-js/tauri-commands/: index.d.ts  index.js
crates/tauri-plugin-client/guest-js/holochain-env/: index.ts
crates/tauri-plugin-client/permissions/: default.toml
crates/tauri-plugin-client/scripts/: build-single-target-cargo.sh
crates/tauri-plugin-client/src/: lib.rs  mobile.rs
crates/tauri-plugin-holochain-service-consumer/: .gitignore  Cargo.toml  build.rs  package.json  rollup.config.js
crates/tauri-plugin-holochain-service-consumer/android/: .gitignore  build.gradle.kts  gradle.properties  local.properties  settings.gradle
crates/tauri-plugin-holochain-service-consumer/android/gradle/wrapper/: gradle-wrapper.properties
crates/tauri-plugin-holochain-service-consumer/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-holochain-service-consumer/android/src/main/java/: AidlTypes.kt  DisconnectedNotice.kt  HolochainServiceConsumerPlugin.kt  InvokeTypes.kt  JSCasting.kt
crates/tauri-plugin-holochain-service-consumer/android/src/main/res/layout/: custom_notification.xml  disconnected_notice.xml
crates/tauri-plugin-holochain-service-consumer/android/src/main/res/raw/: injectholochainclientenv.js
crates/tauri-plugin-holochain-service-consumer/android/src/main/res/values/: colors.xml
crates/tauri-plugin-holochain-service-consumer/android/src/main/res/values-night/: colors.xml
crates/tauri-plugin-holochain-service-consumer/dist-js/holochain-env/: index.min.js
crates/tauri-plugin-holochain-service-consumer/dist-js/tauri-commands/: indes.cjs  index.d.ts  index.js
crates/tauri-plugin-holochain-service-consumer/guest-js/holochain-env/: index.ts
crates/tauri-plugin-holochain-service-consumer/guest-js/tauri-commands/: index.ts
crates/tauri-plugin-holochain-service-consumer/permissions/: default.toml
crates/tauri-plugin-holochain-service-consumer/permissions/schemas/: schema.json
crates/tauri-plugin-holochain-service-consumer/src/: lib.rs  mobile.rs  types.rs
crates/tauri-plugin-service/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-service/android/: .gitignore  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle
crates/tauri-plugin-service/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-service/dist-js/holochain-env/: index.min.js
crates/tauri-plugin-service/dist-js/tauri-commands/: index.d.ts  index.js
crates/tauri-plugin-service/guest-js/holochain-env/: index.ts
crates/tauri-plugin-service/guest-js/tauri-commands/: index.ts
crates/tauri-plugin-service/permissions/: default.toml
crates/tauri-plugin-service/permissions/schemas/: schema.json
crates/tauri-plugin-service/scripts/: build-single-target.sh  build.sh
crates/tauri-plugin-service/src/: lib.rs  mobile.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
(+743 files in other folders)
