[workspace]
members = [
    "crates/holochain-conductor-runtime",
    "crates/holochain-conductor-runtime-ffi",
    "crates/holochain-conductor-runtime-types-ffi",
    "crates/tauri-plugin-service",
    "crates/tauri-plugin-client",
    "crates/uniffi-bindgen-cli",
    "apps/android-service-runtime/src-tauri"
]
exclude = [
    "apps/example-client-app/**"
]
resolver = "2"

[workspace.dependencies]
holochain = "0.4.2"
holochain_conductor_api = "0.4.2"
holochain_types = "0.4.2"
kitsune_p2p_types = "0.4.2"
sodoken = "0.0.11"
url2 = "0.0.6"

tauri = "2.4.1"
tauri-plugin = "2.1.1"
tauri-build = { version = "2.1.1", default-features = false }

log = "0.4.25"
android_logger = "0.14.1"
serde = "1.0"
thiserror = "2.0.11"
bytes = "1.9.0"
zeroize = "1.8.1"
uniffi = { git = "https://github.com/mattyg/uniffi-rs", branch = "fix/expose-rustbuffer-create-rust-2021" }
tempfile = "3.17.1"
tokio = "1.43.0"
uuid = "1.15.1"

# [patch.crates-io]
# holochain = { path = "../holochain/crates/holochain" }
# holochain_conductor_api = { path = "../holochain/crates/holochain_conductor_api" }
# holochain_types = { path = "../holochain/crates/holochain_types" }
# kitsune_p2p_types = { path = "../holochain/crates/kitsune_p2p/types" }