[workspace]
members = [
    "crates/runtime",
    "crates/runtime-ffi",
    "crates/runtime-types-ffi",
    "crates/tauri-plugin-service",
    "crates/tauri-plugin-client",
    "crates/uniffi-bindgen-cli",
    "apps/android-service-runtime/src-tauri"
]
exclude = [
    "apps/example-client-app/**"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
homepage = "https://github.com/holochain/android-service-runtime"
keywords = ["holochain", "android", "tauri", "p2p"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
holochain = "0.5.4"
holochain_conductor_api = "0.5.4"
holochain_types = "0.5.4"
holochain_serialized_bytes = "*"
sodoken = "0.1.0"
url2 = "0.0.6"
lair_keystore_api = "0.6.2"
rustls = "0.23.25"

tauri = "2.5.1"
tauri-plugin = "2.2.0"
tauri-build = { version = "2.2.0", default-features = false }

# Currently using fork of uniffi as a workaround
# See https://github.com/holochain/android-service-runtime/issues/113
uniffi = { package = "hc_uniffi", version = "=0.29.2" }

log = "0.4.25"
android_logger = "0.14.1"
serde = "1.0"
serde_json = "1.0.140"
thiserror = "2.0.11"
bytes = "1.9.0"
zeroize = "1.8.1"
tempfile = "3.17.1"
tokio = "1.43.0"
uuid = "1.15.1"

# [patch.crates-io]
# holochain = { path = "../holochain/crates/holochain" }
# holochain_conductor_api = { path = "../holochain/crates/holochain_conductor_api" }
# holochain_types = { path = "../holochain/crates/holochain_types" }
# kitsune_p2p_types = { path = "../holochain/crates/kitsune_p2p/types" }