[package]
name = "mobile-conductor-admin"
version = "0.1.0"
description = "Volla Holochain Admin"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["unstable"] }
tauri-plugin-holochain-service = { git = "https://github.com/mattyg/p2p-shipyard.git", branch = "feat/foreground-service", package = "tauri-plugin-holochain-service" }
