[package]
name = "holochain-conductor-runtime-ffi"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib"]
name = "holochain_conductor_runtime_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
holochain-conductor-runtime = { path = "../holochain-conductor-runtime" }
holochain-conductor-runtime-types-ffi = { path = "../holochain-conductor-runtime-types-ffi" }
holochain_conductor_api = { workspace = true }
holochain_types = { workspace = true }
log = { workspace = true }
android_logger = { workspace = true }
uniffi = { workspace = true, features = ["cli", "tokio" ] }
thiserror = { workspace = true }
url2 = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
