[package]
name = "holochain-conductor-runtime-types-ffi"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "holochain_conductor_runtime_types_ffi"

[dependencies]
holochain_conductor_api = { workspace = true }
holochain_types = { workspace = true }
hc_uniffi = { workspace = true, features = ["tokio" ] }
url2 = { workspace = true }
serde = { workspace = true }