[package]
name = "holochain-conductor-runtime-types-ffi"
version = "0.1.0"
edition = "2021"
description = "Types used in holochain-conductor-runtime-ffi, used by both client and service."
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["lib", "cdylib"]
name = "holochain_conductor_runtime_types_ffi"

[dependencies]
holochain_conductor_api = { workspace = true }
holochain_types = { workspace = true }
uniffi = { workspace = true, features = ["tokio" ] }
url2 = { workspace = true }
serde = { workspace = true }