[package]
name = "holochain-conductor-runtime"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib"]
name = "holochain_conductor_runtime"


[dependencies]
holochain = { workspace = true }
holochain_types = { workspace = true }
lair_keystore_api = { workspace = true }
sodoken = { workspace = true }
url2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
