[package]
name = "tauri-plugin-holochain-service-client"
version = "0.1.0"
authors = [ "You" ]
description = "Tauri plugin enabling an Android app to run as a client of the tauri-plugin-holochain-service"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-service-client"

[dependencies]
holochain-conductor-runtime-types-ffi = { path = "../runtime-types-ffi", version = "0.1.0" }
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
