[package]
name = "tauri-plugin-holochain-service-client"
version = "0.1.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
description = "Tauri plugin enabling an Android app to run as a client of the tauri-plugin-holochain-service"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
holochain-conductor-runtime-types-ffi = { path = "../runtime-types-ffi", version = "0.1.0" }
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
