[package]
name = "tauri-plugin-holochain-service-consumer"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-service-consumer"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
