[package]
name = "tauri-plugin-holochain-service"
version = "0.1.0"
authors = [ "You" ]
description = "Tauri plugin enabling an Android app to run Holochain as a foreground service"
edition = "2021"
license = "CAL-1.0"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-service"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
tauri-build = { workspace = true }
