[package]
name = "forum-tauri"
version = "0.0.1"
description = "Forum"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "forum_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.1", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-holochain-service-client = { path = "../../../crates/tauri-plugin-client" }

log = "0.4"
tauri-plugin-log = "2.3.1"
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
